glx/testdata/invalid/comprehensive-broken-references/places/place-leeds.glx
places:
  place-leeds:
    name: "Leeds"
    parent: place-nonexistent-parent

